# fast-gif

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  TECHSTACK.md  VISION.md
.github/workflows/: verify.yml
FastGIF/: .gitignore
FastGIF/FastGIF/: ContentView.swift  FastGIFApp.swift
FastGIF/FastGIF.xcodeproj/: project.pbxproj
FastGIF/FastGIF/Kernel/: Decoder.swift  Encoder.swift  Frame.swift  ImageProcessing.swift  Pipeline.swift
FastGIF/FastGIF/Models/: GIFProject.swift
FastGIF/FastGIF/RustCore/: module.modulemap
FastGIF/FastGIF/UI/: Motion.swift  Theme.swift
FastGIF/FastGIFTests/: DecoderTests.swift  EncoderTests.swift  FastGIFTests.swift  KernelTests.swift  PreviewParityTests.swift  ProcessingTests.swift  TestHelpers.swift  TrimmedFramesTests.swift
FastGIF/FastGIFUITests/: FastGIFUITests.swift  FastGIFUITestsLaunchTests.swift
maestro/flows/: 01-app-launch.yaml  02-tab-navigation.yaml  03-batch-view.yaml  04-import-flow.yaml  05-file-import.yaml  06-editor-controls.yaml  07-filter-view.yaml  08-export-flow.yaml  09-export-validate.yaml  99-enter-editor.yaml
openspec/: config.yaml
openspec/specs/encoding/: spec.md
rust/: build-ios.sh
rust/fastgif-core/: Cargo.toml
rust/fastgif-core/include/: fastgif_core.h
rust/fastgif-core/src/: diffuse.rs  lib.rs
rust/fastgif-core/tests/: preview_frame_basic.rs  sampling_sufficiency.rs  sierra_parity.rs
scripts/: bench-diffuse.sh  determinism.sh  make-fixture.sh  sim-bootstrap.sh  verify.sh
tests/: timeline_model_tdd.swift  validate_gif.swift
tests/fixtures/: cat-loaf-3s.mov  flicker-baseline.txt
(+35 files in other folders)
