[package]
name = "fastgif-core"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib: linked into the iOS app. rlib: lets host-side bins/integration
# tests (the verification harness) call the FFI directly without the simulator.
crate-type = ["staticlib", "rlib"]

[dependencies]
color_quant = "1.1"
gif = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
