[package]
name = "fastgif-core"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib: linked into the iOS app. rlib: lets host-side bins/integration
# tests (the verification harness) call the FFI directly without the simulator.
crate-type = ["staticlib", "rlib"]

[dependencies]
color_quant = "1.1"
gif = "0.13"
# Scoped OS threads + cache-padded atomics for the row-tile diffusion wavefront.
# (rayon's pool was evaluated but rejected: the wavefront spin-waits on neighbour
# progress, which can starve a fixed-size work-stealing pool when tiles > workers;
# real scoped threads are always co-scheduled and deadlock-free.)
crossbeam-utils = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
